# project-heimdall

./: .editorconfig  .env.enterprise  .env.example  .env.template  .gitignore  API_TESTING_GUIDE.md  BATCH_UPDATE_SUMMARY.md  CLAUDE.md  ERROR_RESOLUTION_SUMMARY.md  FRONTEND_FIX_REPORT.md  LICENSE  PORT_FIX_SUMMARY.md  PROJECT_CLEANUP_REPORT.md  README.md  SECURITY.md  SECURITY_REPORT.md  USER_GUIDE.md  check_config.py  check_db_schema.py  check_products_table.py  create_products_table.py  debug_navigation.html  docker-compose.yml  enhanced_server.py  final_verification.py  fix_database.py  fix_schema.sql  generate_fernet_key.py  generate_secure_keys.py  logging_config.yaml  open_browser.bat  pyproject.toml  quick_test.sh  quick_test_enterprise.py  requirements.txt  run_migration.py  run_server.py  setup.cfg  simple_products_server.py  simple_security_check.py  (+8 more)
docs/: README.md  业务逻辑.md  数据库模型.md  项目依赖关系.md  项目架构.md
scripts/: add_test_data.py  apply_unified_schema.py  check_db_structure.py  check_user_profiles.py  create_enterprise_data.py  final_verification.py  fix_data_type_mismatch.py  fix_database_step_by_step.py  fix_missing_tables.py  init_product_ads_db.py  migrate_database.py  reinitialize_database.py  restart_server.py  simple_db_check.py  simple_llm_test.py  standalone_migrate.py  test_frontend.py  unified_database_migration.py  verify_database_fix.py
sql/: 001_initial_schema.sql  002_product_ads_schema.sql  003_user_behavior_schema.sql  004_fix_database_schema.sql  005_sample_data.sql  README.md  unified_schema_v2.sql
src/heimdall/: main.py  test_server.py
src/heimdall/api/endpoints/: __init__.py  advertising.py  analysis.py  enterprise_recommendations.py  hybrid_recommendations.py  intent_analysis.py  products.py  testing.py  testing_db.py
src/heimdall/core/: config.py  config_manager.py  context.py  database.py  error_handling.py  logging_config.py  middleware.py  monitoring.py  security.py  structured_logging.py  telemetry.py  utils.py
src/heimdall/models/: __init__.py  db_models.py  schemas.py
src/heimdall/services/: advertising_service.py  hybrid_recommendation_engine.py  llm_service.py  memory_data_provider.py  recommendation_engine.py  session_service.py
src/heimdall/tools/: advertising_tools.py
static/css/: enterprise.css  style.css
static/js/: app.js  enterprise.js
templates/: api-test.html  diagnose.html  enterprise.html  home.html  index.html  js-class-test.html  js-test.html  simple-js-test.html  test.html
tests/: debug_calc.py  test_calculate.py  test_endpoints.py  test_main.py  test_main_db.py
