[metadata]
name = project-heimdall
version = 1.0.0
description = AI意图广告引擎原型，集成大模型测试接口和MCP支持
long_description = file: README.md
long_description_content_type = text/markdown
author = Project Heimdall Team
author_email = team@heimdall.ai
url = https://github.com/your-org/project-heimdall
project_urls =
    Documentation = https://project-heimdall.readthedocs.io
    Source = https://github.com/your-org/project-heimdall
    Tracker = https://github.com/your-org/project-heimdall/issues
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Internet :: WWW/HTTP :: HTTP Servers
    Topic :: Scientific/Engineering :: Artificial Intelligence

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    fastapi>=0.104.0
    uvicorn[standard]>=0.24.0
    sqlalchemy>=2.0.0
    asyncpg>=0.29.0
    pydantic>=2.5.0
    pydantic-settings>=2.1.0
    openai>=1.3.0
    httpx>=0.25.0
    aiohttp>=3.9.0
    python-multipart>=0.0.6
    jinja2>=3.1.0
    python-json-logger>=2.0.0
    pyyaml>=6.0.0
    click>=8.1.0
    rich>=13.7.0
    psycopg2-binary>=2.9.0

[options.packages.find]
where = src

[options.package_data]
heimdall = py.typed

[options.extras_require]
dev =
    pytest>=7.4.0
    pytest-asyncio>=0.21.0
    pytest-cov>=4.1.0
    black>=23.11.0
    ruff>=0.1.0
    mypy>=1.7.0
    pre-commit>=3.5.0
    isort>=5.12.0
    bandit>=1.7.0
test =
    pytest>=7.4.0
    pytest-asyncio>=0.21.0
    pytest-cov>=4.1.0
    httpx>=0.25.0
    factory-boy>=3.3.0
mcp =
    modelcontextprotocol>=0.1.0
    playwright>=1.40.0
    beautifulsoup4>=4.12.0
    selenium>=4.15.0

[options.entry_points]
console_scripts =
    heimdall = heimdall.main:main
    heimdall-dev = scripts.mcp_dev_tools:main
    heimdall-analyze = scripts.intelligent_code_analyzer:main
    heimdall-test = scripts.automated_testing_workflow:main

[bdist_wheel]
universal = 0

[flake8]
max-line-length = 88
extend-ignore = E203, W503
exclude = .git,__pycache__,build,dist,.venv,.tox

[tool:pytest]
minversion = 7.0
addopts = -ra -q --strict-markers --strict-config
testpaths = tests
pythonpath = src
asyncio_mode = auto
filterwarnings =
    ignore::DeprecationWarning
    ignore::PendingDeprecationWarning

[coverage:run]
source = src
omit =
    */tests/*
    */test_*
    */conftest.py
    */setup.py
    */__pycache__/*

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    if self.debug:
    if settings.DEBUG
    raise AssertionError
    raise NotImplementedError
    if 0:
    if __name__ == .__main__.:
    class .*\\bProtocol\\):
    @(abc\\.)?abstractmethod